results/scraper/box64/2141
[BOX32] Error parameter name omitted in my32_XcursorImageLoadCursor when building
Error building with **-D ADLINK=1 -D ARM_DYNAREC=ON -D CMAKE_BUILD_TYPE=RelWithDebInfo -D BOX32=1**. 

Ran it again without the BOX32=1 option and it was fine. Also tried building with GCC-10 and got the same result. 

```
[ 98%] Building C object CMakeFiles/box64.dir/src/wrapped32/wrappedlibxcursor.c.o
/home/ubuntu/box64/src/wrapped32/wrappedlibxcursor.c: In function ‘my32_XcursorImageLoadCursor’:
/home/ubuntu/box64/src/wrapped32/wrappedlibxcursor.c:154:50: error: parameter name omitted
  154 | EXPORT unsigned long my32_XcursorImageLoadCursor(x64emu_t*, void* dpy, void* image)
      |                                                  ^~~~~~~~~
make[2]: *** [CMakeFiles/box64.dir/build.make:5060: CMakeFiles/box64.dir/src/wrapped32/wrappedlibxcursor.c.o] Error 1
make[2]: *** Waiting for unfinished jobs....
make[1]: *** [CMakeFiles/Makefile2:152: CMakeFiles/box64.dir/all] Error 2
make: *** [Makefile:163: all] Error 2
```
**OS and GCC tested:**
Description: Ubuntu 20.04.6 LTS
Release: 20.04
Codename: focal
```

gcc (Ubuntu 9.4.0-1ubuntu1~20.04.2) 9.4.0
gcc (Ubuntu 10.5.0-1ubuntu1~20.04) 10.5.0

```

**CPU details:**
Architecture: aarch64
CPU op-mode(s): 32-bit, 64-bit
Byte Order: Little Endian
CPU(s): 4
On-line CPU(s) list: 0-3
Thread(s) per core: 1
Core(s) per socket: 4
Socket(s): 1
NUMA node(s): 1
Vendor ID: ARM
Model: 1
Model name: Neoverse-N1
Stepping: r3p1
BogoMIPS: 50.00
NUMA node0 CPU(s): 0-3
Vulnerability Gather data sampling: Not affected
Vulnerability Itlb multihit: Not affected
Vulnerability L1tf: Not affected
Vulnerability Mds: Not affected
Vulnerability Meltdown: Not affected
Vulnerability Mmio stale data: Not affected
Vulnerability Reg file data sampling: Not affected
Vulnerability Retbleed: Not affected
Vulnerability Spec rstack overflow: Not affected
Vulnerability Spec store bypass: Mitigation; Speculative Store Bypass disabled via prctl
Vulnerability Spectre v1: Mitigation; __user pointer sanitization
Vulnerability Spectre v2: Mitigation; CSV2, BHB
Vulnerability Srbds: Not affected
Vulnerability Tsx async abort: Not affected
Flags: fp asimd evtstrm aes pmull sha1 sha2 crc32 atomics fphp asimdhp cpuid asimdrdm lrcpc dcpop asimddp